--- a/empty-resources/0000_05_config-operator_02_build.cr.yaml
+++ b/empty-resources/0000_05_config-operator_02_build.cr.yaml
@@ -3,6 +3,7 @@ kind: Build
 metadata:
   name: cluster
   annotations:
+    capability.openshift.io/name: Build
     include.release.openshift.io/ibm-cloud-managed: "true"
     include.release.openshift.io/self-managed-high-availability: "true"
     include.release.openshift.io/single-node-developer: "true"
