--- a/manifests/0000_00_config-operator_00_namespace.yaml
+++ b/manifests/0000_00_config-operator_00_namespace.yaml
@@ -9,4 +9,7 @@ metadata:
     workload.openshift.io/allowed: "management"
   labels:
     openshift.io/cluster-monitoring: "true"
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
   name: openshift-config-operator
