--- a/manifests/0000_10_config-operator_01_openshift-config-managed-ns.yaml
+++ b/manifests/0000_10_config-operator_01_openshift-config-managed-ns.yaml
@@ -9,3 +9,6 @@ metadata:
   name: openshift-config-managed
   labels:
     openshift.io/run-level: "0"
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
