set up openshift-tests-extension and add a sanity test

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Test output files
+junit.xml
+report.json
+test-results/
+
 _output/
 .idea
 cluster-config-operator
+/cluster-config-operator-tests-ext
