--- a/Dockerfile.rhel7
+++ b/Dockerfile.rhel7
@@ -2,12 +2,15 @@ FROM registry.ci.openshift.org/ocp/builder:rhel-9-golang-1.24-openshift-4.20 AS 
 WORKDIR /go/src/github.com/openshift/cluster-config-operator
 COPY . .
 ENV GO_PACKAGE github.com/openshift/cluster-config-operator
-RUN make build --warn-undefined-variables
+RUN make build --warn-undefined-variables \
+    && make tests-ext-build \
+    && gzip cluster-config-operator-tests-ext
 
 FROM registry.ci.openshift.org/ocp/4.20:base-rhel9
 RUN mkdir -p /usr/share/bootkube/manifests/manifests
 RUN mkdir -p /usr/share/bootkube/manifests/bootstrap-manifests
 COPY --from=builder /go/src/github.com/openshift/cluster-config-operator/cluster-config-operator /usr/bin/
+COPY --from=builder /go/src/github.com/openshift/cluster-config-operator/cluster-config-operator-tests-ext.gz /usr/bin/
 COPY manifests /manifests
 
 LABEL io.openshift.release.operator true
